# cui-cvg

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  cli  main.cc
.cache/clangd/index/: cvg.cc.87729806F1F7C87C.idx  cvg.hh.9ED71AA160346969.idx  main.cc.91EEC2D9BE5861A8.idx
include/: cvg.hh
lib/: cvg.cc
src/: group.rs  main.cc  main.rs  syllable.rs
